--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
           </ul>
         </div>
         <ul class="navigation-list navigation-user">
-          <li class="navigation-item">
-            <a class="navigation-link navigation-link-phone header-link" href="tel:+78005558628">+7 800 555-86-28</a>
+          <li class="navigation-item navigation-item-tel">
+            <a class="navigation-link-phone header-link" href="tel:+78005558628">+7 800 555-86-28</a>
           </li>
           <li class="navigation-item navigation-item-search">
-            <button type="button" class="navigation-link header-link header-button navigation-link-search">
+            <button type="button" class="header-link header-button navigation-link-search">
               <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg"
                 aria-hidden="true" focusable="false">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -70,7 +70,7 @@
             </div>
           </li>
           <li class="navigation-item">
-            <button type="button" class="navigation-link header-link header-button navigation-link-personal-account">
+            <button type="button" class="header-link header-button navigation-link-personal-account">
               <svg width="14" height="15" viewBox="0 0 14 15" fill="none" xmlns="http://www.w3.org/2000/svg"
                 aria-hidden="true" focusable="false">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -100,7 +100,7 @@
             </div>
           </li>
           <li class="navigation-item">
-            <button type="button" class="navigation-link header-link header-button navigation-link-busket">
+            <button type="button" class="header-link header-button navigation-link-busket">
               <svg width="15" height="14" viewBox="0 0 15 14" fill="none" xmlns="http://www.w3.org/2000/svg"
                 aria-hidden="true" focusable="false">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -242,8 +242,7 @@
             <svg width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg"
               aria-hidden="true" focusable="false">
               <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M1.14.86a.66.66 0 1 0-.95.95L4.4 6 .2 10.2a.67.67 0 0 0 .95.94L5.8 6.48a.66.66 0 0 0 0-.94L1.15.86Z"
-                fill="#2D3440" />
+                d="M1.14.86a.66.66 0 1 0-.95.95L4.4 6 .2 10.2a.67.67 0 0 0 .95.94L5.8 6.48a.66.66 0 0 0 0-.94L1.15.86Z"/>
             </svg>
           </button>
           <button class="slider-button slider-button-next" type="button">
@@ -251,8 +250,7 @@
             <svg width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg"
               aria-hidden="true" focusable="false">
               <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M1.14.86a.66.66 0 1 0-.95.95L4.4 6 .2 10.2a.67.67 0 0 0 .95.94L5.8 6.48a.66.66 0 0 0 0-.94L1.15.86Z"
-                fill="#2D3440" />
+                d="M1.14.86a.66.66 0 1 0-.95.95L4.4 6 .2 10.2a.67.67 0 0 0 .95.94L5.8 6.48a.66.66 0 0 0 0-.94L1.15.86Z"/>
             </svg>
           </button>
           <ol class="slider-pagination">
@@ -375,7 +373,7 @@
               <img class="icecream-image" src="/images/catalog/blueberry.png"
                 alt="Шарик Крем-брюле с прослойкой черничного джема." width="168" height="168">
               <h3 class="icecream-name">Черника</h3>
-              <p class="icecream-text">Крем-брюле с черничным джемом </p>
+              <p class="icecream-text">Крем-брюле<br> с черничным джемом </p>
             </a>
             <div class="price-wrapper">
               <span class="product-price">330 ₽/кг</span>
@@ -394,7 +392,7 @@
               <img class="icecream-image" src="/images/catalog/bubble-gum.png"
                 alt="Шарик мороженого голубого цвета с разноцветной крошкой." width="168" height="168">
               <h3 class="icecream-name">Бабл-гам</h3>
-              <p class="icecream-text">Ванильный пломбир со сладкой посыпкой</p>
+              <p class="icecream-text">Ванильный пломбир<br> со сладкой посыпкой</p>
             </a>
             <div class="price-wrapper">
               <span class="product-price">320 ₽/кг</span>
@@ -464,12 +462,12 @@
       <section class="delivery content-wrapper delivery-wrapper">
         <div class="delivery-content">
           <h2 class="tittle delivery-tittle">Доставка любимого мороженого на дом</h2>
-          <p class="delivery-text">Хочется полакомиться любимым десертом, но нет времени съездить в магазин? Закажите
+          <p class="delivery-text">Хочется полакомиться любимым десертом,<br> но нет времени съездить в магазин? Закажите
             доставку мороженого на
             дом, и курьер привезёт вам ваш заказ в течение часа!</p>
         </div>
         <form class="delivery-form" action="https://echo.htmlacademy.ru/" method="post">
-          <p class="delivery-form-text">Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить
+          <p class="delivery-form-text">Укажите адрес и дату доставки, и мы свяжемся<br> с вами, чтобы подтвердить
             заказ.</p>
           <div class="delivery-input-wrapper">
             <div class="input-wrapper delivery-input-date">
@@ -573,7 +571,7 @@
             <a class="footer-about-link" href="#">О производстве</a>
           </li>
         </ul>
-        <ul class="footer-about-list">
+        <ul class="footer-about-list footer-about-list-right">
           <li class="footer-about-item">
             <a class="footer-about-link" href="#">Наши документы</a>
           </li>
@@ -583,7 +581,7 @@
         </ul>
       </div>
       <div class="footer-copyright">
-        <a href="https://htmlacademy.ru/" target="_blank">
+        <a class="footer-logo-link" href="https://htmlacademy.ru/" target="_blank">
           <img class="footer-logo" src="./images/made-by.svg" width="93" height="27" alt="Html academy.">
         </a>
         <p class="footer-copyright-text">Сделано в
