--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>HTML Academy: Глейси</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link type="image/x-icon" href="favicon.ico" rel="shortcut icon">
