--- a/catalog.html
+++ b/catalog.html
@@ -18,43 +18,41 @@
         <a class="gllacy-link" href="index.html">
           <img src="/images/logo.svg" alt="Логотип Глэйси." width="137" height="56">
         </a>
-        <div class="navigation-left">
-          <ul class="navigation-list">
-            <li class="navigation-list-item submenu-list">
-              <a class="navigation-link header-link is-current" href="catalog.html">Каталог</a>
-              <div class="navigation-link-submenu">
-                <p class="submenu-text">Новинки</p>
-                <ul class="submenu">
-                  <li class="submenu-item">
-                    <a class="submenu-item-link" href="#">Сливочное</a>
-                  </li>
-                  <li class="submenu-item">
-                    <a class="submenu-item-link" href="#">Щербеты</a>
-                  </li>
-                  <li class="submenu-item">
-                    <a class="submenu-item-link" href="#">Фруктовый лед</a>
-                  </li>
-                  <li class="submenu-item">
-                    <a class="submenu-item-link" href="#">Мелорин</a>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li class="navigation-list-item">
-              <a class="navigation-link header-link" href="#">Доставка и оплата</a>
-            </li>
-            <li class="navigation-list-item">
-              <a class="navigation-link header-link" href="#">О компании</a>
-            </li>
-          </ul>
-        </div>
+        <ul class="navigation-list">
+          <li class="navigation-list-item submenu-list">
+            <a class="navigation-link header-link is-current" href="catalog.html">Каталог</a>
+            <div class="navigation-link-submenu">
+              <p class="submenu-text">Новинки</p>
+              <ul class="submenu">
+                <li class="submenu-item">
+                  <a class="submenu-item-link" href="#">Сливочное</a>
+                </li>
+                <li class="submenu-item">
+                  <a class="submenu-item-link" href="#">Щербеты</a>
+                </li>
+                <li class="submenu-item">
+                  <a class="submenu-item-link" href="#">Фруктовый лед</a>
+                </li>
+                <li class="submenu-item">
+                  <a class="submenu-item-link" href="#">Мелорин</a>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="navigation-list-item">
+            <a class="navigation-link header-link" href="#">Доставка и оплата</a>
+          </li>
+          <li class="navigation-list-item">
+            <a class="navigation-link header-link" href="#">О компании</a>
+          </li>
+        </ul>
         <ul class="navigation-list navigation-user">
           <li class="navigation-item navigation-item-tel">
             <a class="navigation-link-phone header-link" href="tel:+78005558628">+7 800 555-86-28</a>
           </li>
           <li class="navigation-item navigation-item-search">
             <button type="button" class="header-link header-button navigation-link-search">
-              <span class="visually-hidden">Поиск.</span>
+              <span class="visually-hidden">Поиск по сайту.</span>
             </button>
 
             <div class="header-popap header-popap-search">
@@ -74,10 +72,12 @@
               <p class="header-popap-tittle">Личный кабинет</p>
               <form class="header-popap-form" action="https://echo.htmlacademy.ru">
                 <div class="header-popap-form-wrapper">
-                  <input class="header-popap-input page-input popap-email-input" name="email" type="email"
+                  <label class="visually-hidden" for="header-email">поле ввода электронной почты.</label>
+                  <input class="header-popap-input page-input popap-email-input" name="email" id="header-email" type="email"
                     value="email@example.com" placeholder="введите email">
-                  <input class="header-popap-input page-input" name="password" type="password" value="asdfgh"
-                    placeholder="введите пароль">
+                  <label class="visually-hidden" for="password">поле ввода пароля.</label>
+                  <input class="header-popap-input page-input password-input" name="password" id="password" type="password"
+                    value="asdfgh" placeholder="введите пароль">
                 </div>
                 <div class="header-popap-form-buttons">
                   <button type="submit" class="button red-button popap-button">Войти</button>
@@ -112,7 +112,6 @@
                         d="M9.80303 1.13807C10.0634 0.877722 10.0634 0.455612 9.80303 0.195262C9.54268 -0.0650874 9.12057 -0.0650874 8.86022 0.195262L4.99914 4.05633L1.13807 0.195262C0.877722 -0.0650874 0.455612 -0.0650874 0.195262 0.195262C-0.0650874 0.455612 -0.0650874 0.877722 0.195262 1.13807L4.05633 4.99914L0.195262 8.86022C-0.0650874 9.12057 -0.0650874 9.54268 0.195262 9.80303C0.455612 10.0634 0.877722 10.0634 1.13807 9.80303L4.99914 5.94195L8.86022 9.80303C9.12057 10.0634 9.54268 10.0634 9.80303 9.80303C10.0634 9.54268 10.0634 9.12057 9.80303 8.86022L5.94195 4.99914L9.80303 1.13807Z"
                         fill="#2D3440" />
                     </svg>
-
                   </button>
                 </li>
                 <li class="header-popap-item">
@@ -163,7 +162,7 @@
       <section class="options">
         <h2 class="visually-hidden">Фильтр товаров.</h2>
         <div class="content-wrapper">
-          <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="post">
+          <form class="catalog-filter" action="https://echo.htmlacademy.ru/">
             <div class="sorting">
               <label for="sorting-select" class="sorting-tittle">Сортировка:</label>
               <select class="select-control" aria-label="Сортировка" id="sorting-select">
@@ -173,14 +172,7 @@
               </select>
             </div>
             <fieldset class="catalog-filter-group">
-              <span class="catalog-filter-tittle">Цена:</span>
-              <label class="catalog-filter-label">
-                <input class="range-input" type="number" value="100" name="min-price">₽
-              </label>
-              <span class="range-input-dash">-</span>
-              <label class="catalog-filter-label">
-                <input class="range-input" type="number" value="500" name="max-price">₽
-              </label>
+              <legend class="catalog-filter-tittle">Цена: 100 ₽ – 500 ₽</legend>
               <div class="range">
                 <div class="range-scale">
                   <div class="range-bar">
@@ -537,7 +529,7 @@
     <footer class="page-footer">
       <ul class="social-list footer-social-list">
         <li class="social-item">
-          <a class="social-link" href="https://t.me/htmlacademy">
+          <a class="social-link footer-social-link" href="https://t.me/htmlacademy">
             <span class="visually-hidden">Ссылка на телеграмм-канал.</span>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
               aria-hidden="true" focusable="false">
@@ -548,7 +540,7 @@
           </a>
         </li>
         <li class="social-item">
-          <a class="social-link" href="https://vk.com/htmlacademy">
+          <a class="social-link footer-social-link" href="https://vk.com/htmlacademy">
             <span class="visually-hidden">Ссылка на группу вконтакте.</span>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
               aria-hidden="true" focusable="false">
@@ -559,7 +551,7 @@
           </a>
         </li>
         <li class="social-item">
-          <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
+          <a class="social-link footer-social-link" href="https://www.youtube.com/user/htmlacademyru">
             <span class="visually-hidden">Ссылка на ютуб-канал.</span>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
               aria-hidden="true" focusable="false">
