--- a/index.html
+++ b/index.html
@@ -476,17 +476,17 @@
     <footer class="page-footer">
       <ul class="social-list footer-social-list">
         <li class="social-item">
-          <a class="social-link social-link-tg" href="https://t.me/htmlacademy">
+          <a class="social-link footer-social-link social-link-tg" href="https://t.me/htmlacademy">
             <span class="visually-hidden">Ссылка на телеграмм-канал.</span>
           </a>
         </li>
         <li class="social-item">
-          <a class="social-link social-link-vk" href="https://vk.com/htmlacademy">
+          <a class="social-link footer-social-link social-link-vk" href="https://vk.com/htmlacademy">
             <span class="visually-hidden">Ссылка на группу вконтакте.</span>
           </a>
         </li>
         <li class="social-item">
-          <a class="social-link social-link-youtube" href="https://www.youtube.com/user/htmlacademyru">
+          <a class="social-link footer-social-link social-link-youtube" href="https://www.youtube.com/user/htmlacademyru">
             <span class="visually-hidden">Ссылка на ютуб-канал.</span>
           </a>
         </li>
