--- a/catalog.html
+++ b/catalog.html
@@ -58,7 +58,7 @@
             <div class="header-popap header-popap-search">
               <form class="header-popap-form" action="https://echo.htmlacademy.ru">
                 <label class="visually-hidden" for="search">поле поиска по сайту.</label>
-                <input class="header-popap-input page-input search-input" id="search" name="search" type="search"
+                <input class="header-popap-input delivery-input search-input" id="search" name="search" type="search"
                   placeholder="Поиск по сайту">
               </form>
             </div>
@@ -73,10 +73,10 @@
               <form class="header-popap-form" action="https://echo.htmlacademy.ru">
                 <div class="header-popap-form-wrapper">
                   <label class="visually-hidden" for="header-email">поле ввода электронной почты.</label>
-                  <input class="header-popap-input page-input popap-email-input" name="email" id="header-email" type="email"
+                  <input class="header-popap-input delivery-input popap-email-input" name="email" id="header-email" type="email"
                     value="email@example.com" placeholder="введите email">
                   <label class="visually-hidden" for="password">поле ввода пароля.</label>
-                  <input class="header-popap-input page-input password-input" name="password" id="password" type="password"
+                  <input class="header-popap-input delivery-input password-input" name="password" id="password" type="password"
                     value="asdfgh" placeholder="введите пароль">
                 </div>
                 <div class="header-popap-form-buttons">
@@ -198,8 +198,7 @@
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="visually-hidden control-input" type="radio" name="product-group" value="below-10%"
-                      checked>
+                    <input class="visually-hidden control-input" type="radio" name="product-group" value="below-10%" checked>
                     <span class="control-mark"></span>
                     <span class="control-label">до 10%</span>
                   </label>
