--- a/index.html
+++ b/index.html
@@ -54,11 +54,10 @@
             <button type="button" class="header-link header-button navigation-link-search">
               <span class="visually-hidden">Поиск по сайту.</span>
             </button>
-
             <div class="header-popap header-popap-search">
               <form class="header-popap-form" action="https://echo.htmlacademy.ru">
                 <label class="visually-hidden" for="search">поле поиска по сайту.</label>
-                <input class="header-popap-input page-input search-input" id="search" name="search" type="search"
+                <input class="header-popap-input delivery-input search-input" id="search" name="search" type="search"
                   placeholder="Поиск по сайту">
               </form>
             </div>
@@ -73,11 +72,11 @@
               <form class="header-popap-form" action="https://echo.htmlacademy.ru">
                 <div class="header-popap-form-wrapper">
                   <label class="visually-hidden" for="header-email">поле ввода электронной почты.</label>
-                  <input class="header-popap-input page-input popap-email-input" name="email" id="header-email" type="email"
-                    value="email@example.com" placeholder="введите email">
+                  <input class="header-popap-input delivery-input popap-email-input" name="email" id="header-email"
+                    type="email" value="email@example.com" placeholder="введите email">
                   <label class="visually-hidden" for="password">поле ввода пароля.</label>
-                  <input class="header-popap-input page-input password-input" name="password" id="password" type="password"
-                    value="asdfgh" placeholder="введите пароль">
+                  <input class="header-popap-input delivery-input password-input" name="password" id="password"
+                    type="password" value="asdfgh" placeholder="введите пароль">
                 </div>
                 <div class="header-popap-form-buttons">
                   <button type="submit" class="button red-button popap-button">Войти</button>
@@ -486,7 +485,8 @@
           </a>
         </li>
         <li class="social-item">
-          <a class="social-link footer-social-link social-link-youtube" href="https://www.youtube.com/user/htmlacademyru">
+          <a class="social-link footer-social-link social-link-youtube"
+            href="https://www.youtube.com/user/htmlacademyru">
             <span class="visually-hidden">Ссылка на ютуб-канал.</span>
           </a>
         </li>
